deploy: 5f840e01565d89ab0cab80bf1d6e409646210bdb

--- a/events/2021-10-21-docker/index.html
+++ b/events/2021-10-21-docker/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7-9pm</p><p>October 21, 2021</p><h3>Where?</h3><p>Exchange C33</p></div><div class=article-left><h1>Workshop: Docker</h1><div><p>Learn how to use <a href=https://docker.io>Docker</a> with Peter in this workshop.</p><p>This serves as a follow up to his talk from the first introduction event.</p><p>A Linux laptop or virtual machine (Ubuntu or Debian is fine) is highly reccommended to follow along, especially as there are no computers in the room we&rsquo;re using.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
