--- a/events/2021-10-26/index.html
+++ b/events/2021-10-26/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7-9pm</p><p>October 26, 2021</p><h3>Where?</h3><p>Exchange building LT3</p></div><div class=article-left><h1>Building a Raspberry Pi Robot Arm with .NET 5, Blazor and SignalR</h1><div><p>In this talk Pete Gallagher takes you through everything you need to build a robot arm with a Raspberry Pi, .NET 5 a Blazor App and SignalR.</p><p>We begin by talking about .NET 5 and seeing how easy it is to install .NET 5. Then we look through the various circuits and spin up a console application to explore how we can control the GPIO on the Pi. We see how the Servos are wired up and get the code in place to start moving our Raspberry pi based Robot Arm.</p><p>Next we’ll look at a simple Blazor and SignalR app to control our robot remotely! Finally we’ll have a look at how we can use an Oculus Quest 2 to interact with our Robot Arm in VR!</p><p>This talk appeals to all knowledge levels and anyone interested in getting into STEM, Electronics and Robotics.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
