--- a/events/2021-12-07-email/index.html
+++ b/events/2021-12-07-email/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7-9pm</p><p>December 16, 2021</p><h3>Where?</h3><p>LT3, Exchange Building, Jubilee Campus</p></div><div class=article-left><h1>How email works: A Talk</h1><div><p>Email is a tool that has been around since the dawn of the internet, and is nearly ubiquitous, but have you ever thought about how it works?</p><p>In this talk James will be giving an overview of all of the different components that make email work, and why even after 50 years it is still hard to setup your own email server.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
