--- a/events/2021-12-14-blog-workshop/index.html
+++ b/events/2021-12-14-blog-workshop/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7-9pm</p><p>December 14, 2021</p><h3>Where?</h3><p>C33, Exchange Building, Jubilee Campus</p></div><div class=article-left><h1>Making a blog and getting it online!</h1><div><p>Have you ever wanted a website? Making a blog is a great way to boost your online presence, and is also a really fun way to express yourself.</p><p>This first half of this workshop will be Dev Sec Zac going through how to make a nice website with the Hugo static site generator.</p><p>The second half will be Gen Sec James going through how to host your website with GitHub pages with a custom domain.</p><p>If you follow along, by the end of this workshop you will have a website accessible on the world wide web!</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
