--- a/events/2021-arch-install/index.html
+++ b/events/2021-arch-install/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7-9pm</p><p>November 2, 2021</p><h3>Where?</h3><p>Exchange LT3</p></div><div class=article-left><h1>Arch Install Event</h1><div><p>Prepare your best heckles, as Jacob and Peter will be installing <a href=https://archlinux.org>Arch Linux</a> live at this event - what could possibly go wrong?</p><p>The event will take place in the Exchange LT3 lecture theatre on Jubilee Campus.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
