--- a/events/2022-02-17-c-50-years/index.html
+++ b/events/2022-02-17-c-50-years/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7-9pm</p><p>February 17, 2022</p><h3>Where?</h3><p>LT1, Exchange Building</p></div><div class=article-left><h1>Half a century of C</h1><div><p>2022 marks the 50th anniversary of the C programming language! To celebrate this, I (Jacob) am going to download many different historical C compilers and demonstrate how the language evolved from a simple language originally written in assembly, to the language we all know and love today.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
