--- a/events/2022-03-01-python-internals-talk/index.html
+++ b/events/2022-03-01-python-internals-talk/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7-9pm</p><p>March 1, 2022</p><h3>Where?</h3><p>LT1, Exchange Building</p></div><div class=article-left><h1>Python Internals Talk</h1><div><p>What actually happens when you tell Python to <code>print("Hello, world!")</code>? How does your computer turn the characters you type into something it understands, and then how exactly is this executed? What does it even mean to <em>compile</em> Python code - isn&rsquo;t it an interpreted language?</p><p>All of these questions and more will be answered in this talk. Using Python as an example, Zac will give an in-depth look into how interpreted programming languages work from the ground up. Concepts covered will include scanning & parsing, compilation, and evaluation, among many more, giving you an insight the entire journey your program takes from source code to execution.</p><p>Since the Python interpreter&rsquo;s source code is surprisingly readable, I&rsquo;ll be going through some snippets of C code, but understanding of C is by no means necessary.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
