--- a/events/2022-04-05-lightning-talks/index.html
+++ b/events/2022-04-05-lightning-talks/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7-9pm</p><p>April 5, 2022</p><h3>Where?</h3><p>The Rose & Crown Pub, near Jubilee campus.</p></div><div class=article-left><h1>Lightning Talks</h1><div><p>A bunch of short talks given by members. There will also be a fun quiz.</p><p>If you want to give a talk, please go to <a href=https://hacksoc.net/lightning>hacksoc.net/lightning</a> and tell us what you talk will be about.</p><p>This event will be hosted in the function room of the Rose & Crown pub, which is near Jubilee Campus.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
