--- a/events/2022-05-12-programming-cafe/index.html
+++ b/events/2022-05-12-programming-cafe/index.html
@@ -3,7 +3,7 @@
 We&rsquo;ll be encouraging people to do a brief show and tell towards the end, and you may end up spotlit in our newsletter!</p><p>We will also have coffee, tea, and biscuits.</p><p>The event will take place in A07, in the Computer Science Building.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
