--- a/events/2022-05-28-hack-and-slash/index.html
+++ b/events/2022-05-28-hack-and-slash/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7pm</p><p>May 28, 2022</p><h3>Where?</h3><p>Meet at the White Hart</p></div><div class=article-left><h1>Hack & Slash Pub Crawl</h1><div><p>On the 28th of May, HackSoc and Medieval Combat Society will be going out for a joint pub crawl! We&rsquo;ll start at the White Hart at 7pm.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
