--- a/events/2022-06-02-jubilee-bbq/index.html
+++ b/events/2022-06-02-jubilee-bbq/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>2-5pm</p><p>June 2, 2022</p><h3>Where?</h3><p>Island on the Lake, Outside Computer Science</p></div><div class=article-left><h1>Summer Jubilee BBQ</h1><div><p>After exams have finished, HackSoc will be doing our patriotic duty and hosting a BBQ to celebrate the Queen&rsquo;s Platinum Jubilee (which is the day after.) This will be a great place to unwind from the stresses of exams which will have just finished!</p><p>As this event is a BBQ, food and drink will be provided. If you are thinking of coming along, please can you fill out a quick form at <a href=https://hacksoc.net/jubilee-bbq>hacksoc.net/jubilee-bbq</a> so we know how much food to get.</p><p>This event will be taking place on the island on the lake behind the Computer Science building at 2pm on Friday the 2nd of June.</p><p>This is going to be the last HackSoc event for the year, so be sure to come along!</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
