--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <a href=https://hacksocnotts.co.uk/events/2022-06-02-jubilee-bbq/>Summer Jubilee BBQ</a></article></div><div><h2><a href=/newsletters>Newsletters</a></h2><div id=paginator></div></div></div></div><div><h2>Who can join?</h2>HackSoc is open to all. From newbies to seasoned developers, as long as you’re interested in tech, HackSoc is for you.<div id=who-can-join><div><h3>Newbies</h3>Anyone with little or no knowledge of programming; no experience required!</div><div><h3>Developers</h3>Improve your skillset, meet other people like you and travel to Hackathons with friends.</div><div><h3>Designers</h3>Got an idea that could work with some programming? Come along to share your idea, build your idea and get great things made!</div></div></div></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
