--- a/events/2021-12-16-christmas/index.html
+++ b/events/2021-12-16-christmas/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7-9pm</p><p>December 7, 2021</p><h3>Where?</h3><p>Rose and Crown upper floor</p></div><div class=article-left><h1>HackSoc Christmas Quiz</h1><div><p>Come along to our Christmas quiz! We have booked out the top floor of the Rose and Crown pub, next to Jubilee campus, and we will be having a fun HackSoc quiz, with a bit of a Christmas feel. The quiz consists of rounds devised by committee members, and you&rsquo;ll compete in teams. There are prizes for the winning team!</p><p>After the quiz we will be playing some party games, so be sure to come along!</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
