--- a/events/2021-egm/index.html
+++ b/events/2021-egm/index.html
@@ -5,7 +5,7 @@ If you want to run for committee yourself, please apply at <a href=https://hacks
 We are also looking for people interested in organising HackNotts 2021, our annual hackathon. If you are interested please apply at <a href=https://hacknotts.com/organise>https://hacknotts.com/organise</a>, and we will get back to you.</p><p>Here are the available committee positions:</p><ul><li>Vice President</li><li>Welfare and Inclusivity Secretary</li><li>Social Media Secretary*</li><li>Marketing Secretary*</li><li>Graphics Officer</li><li>Industrial Partners Secretary</li><li>If you are interested in running for committee, please apply at <a href=https://hacksoc.net/nominate>https://hacksoc.net/nominate</a></li></ul><p>*If we don&rsquo;t fill both positions, we will put forth a motion to merge the Social Media and Marketing Secretary roles into one, so if you apply, keep in mind that you may end up doing both.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
