--- a/events/2021-linux-intro/index.html
+++ b/events/2021-linux-intro/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>7-9pm</p><p>October 19, 2021</p><h3>Where?</h3><p>Exchange LT3</p></div><div class=article-left><h1>Workshop: Introduction to Linux</h1><div><p>Come along to an introduction to Linux for those who haven&rsquo;t used the operating system before.</p><p>This talk will cover several areas:</p><ul><li>What is Linux?</li><li>Why would I use Linux?</li><li>What makes Linux different from other operating systems?</li><li>How do I get started with Linux?</li><li>Common gotcha situations.</li><li>How to find help?</li></ul><p>The event will take place in the Exchange Building LT3</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
