--- a/events/2021-welcome-week-up/index.html
+++ b/events/2021-welcome-week-up/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>6:30-8:30pm</p><p>September 28, 2021</p><h3>Where?</h3><p>Keighton Auditorium</p></div><div class=article-left><h1>2021 Welcome Week Event</h1><div><p>Welcome to HackSoc! To kick off the new academic year, we&rsquo;ve got our try-it introduction event. In this event, we&rsquo;ll have talks on the following:</p><ul><li>Introduction to cyber security</li><li>Asteroids to the Oscilloscope</li><li>Coding for an art gallery</li></ul><p>In addition to an overall introduction to the society, and an overview of how you can get involved in the wider Nottingham tech community.</p><p>The event will take place in the Keighton Auditorium, just down the hill from the Portland building, but will also be streamed <a href=https://www.youtube.com/channel/UC3cq7pgEjandUq9UHpEHaKw>on our YouTube channel</a> because we may have to limit the number of people attending due to COVID rules.</p><p>There will be pizza! 🍕</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
