--- a/events/2022-02-15-python3/index.html
+++ b/events/2022-02-15-python3/index.html
@@ -2,7 +2,7 @@
 <a href=https://hacknotts.com/>HackNotts</a></nav></header><main><article class=article-split><div class=article-right><h3>When?</h3><p>6:30-8:45pm</p><p>February 15, 2022</p><h3>Where?</h3><p>C3, Exchange Building</p></div><div class=article-left><h1>Introduction to Python - Workshop 3</h1><div><p>Do you want to learn how to program? In this workshop you will be introduced to the Python Programming Language, and be taught the basic concepts that underpin programming generally.</p><p>In this session, we&rsquo;ll put (almost) everything you&rsquo;ve learned into making a hangman game!</p><p>This workshop is part three of a three part series that will be running throughout February. If you enjoy it be sure to come along to the other ones.</p></div></div></article></main><footer><section class=flex><a href=https://github.com/HackSocNotts>GitHub</a>
 <a href=https://twitter.com/HackSocNotts>Twitter</a>
 <a href=https://www.facebook.com/hacksocnotts/>Facebook</a>
-<a href=https://hacksoc.net/constitution.pdf>Constitution</a>
+<a href=https://hacksoc.net/constitution>Constitution</a>
 <a href=/committee>Committee</a>
 <a href=https://hacksoc.net/code-of-conduct>Code of Conduct</a>
 <a href=/events>All Events</a></section><span>Copyright &copy; 2022 <a href=https://hacksocnotts.co.uk/>HackSoc</a></span></footer></body></html>
